2013-11-19  Martin Jambor  <mjambor@suse.cz>

	PR rtl-optimization/59099
	* ira.c (find_moveable_pseudos): Put back various analyses from ira()
	here.
	(ira): Move init_reg_equiv and call to
	split_live_ranges_for_shrink_wrap up, remove analyses around call
	to find_moveable_pseudos.

2013-11-20  Alan Modra  <amodra@gmail.com>

	* config/rs6000/sysv4.h (CC1_ENDIAN_LITTLE_SPEC): Define as empty.
	* config/rs6000/rs6000.c (rs6000_option_override_internal): Default
	to strict alignment on older processors when little-endian.
	* config/rs6000/linux64.h (PROCESSOR_DEFAULT64): Default to power8
	for ELFv2.

2013-11-19  Teresa Johnson  <tejohnson@google.com>

	* common/config/i386/i386-common.c: Enable
	-freorder-blocks-and-partition at -O2 and up for x86.
	* doc/invoke.texi: Update -freorder-blocks-and-partition default.
	* opts.c (finish_options): Only warn if -freorder-blocks-and-
	partition was set on command line.

2013-11-19  Sriraman Tallam  <tmsriram@google.com>

	* final.c (final_scan_insn): Emit a label for the split
	cold function part.  Label name is formed by suffixing
	the original function name with "cold".

2013-11-19  David Malcolm  <dmalcolm@redhat.com>

	* basic-block.h (ENTRY_BLOCK_PTR_FOR_FUNCTION): Rename macro to...
	(EXIT_BLOCK_PTR_FOR_FUNCTION): ...this.
	(ENTRY_BLOCK_PTR_FOR_FN): Renamed macro to...
	(EXIT_BLOCK_PTR_FOR_FN): ...this.
	(ENTRY_BLOCK_PTR): Eliminate macro as work towards making uses of
	cfun be explicit.
	(EXIT_BLOCK_PTR): Likewise.
	(FOR_ALL_BB): Rework for now to eliminate use of "ENTRY_BLOCK_PTR".
	(FOR_ALL_BB_FN): Update for renaming of
	"ENTRY_BLOCK_PTR_FOR_FUNCTION" to "ENTRY_BLOCK_PTR_FOR_FN".

	* cfg.c (init_flow): Likewise.
	(check_bb_profile): Likewise.
	* cfganal.c (pre_and_rev_post_order_compute_fn): Likewise.
	* cfgcleanup.c (walk_to_nondebug_insn): Likewise.
	* cfghooks.c (account_profile_record): Likewise.
	* cfgloop.c (init_loops_structure): Likewise.
	* cgraphbuild.c (record_eh_tables): Likewise.